tests/data/placebo/ec2_igw_subnet/ec2.DescribeRouteTables_1.json
{
    "status_code": 200,
    "data": {
        "RouteTables": [
            {
                "Associations": [
                    {
                        "Main": true,
                        "RouteTableAssociationId": "rtbassoc-0b43dc648fee5290c",
                        "RouteTableId": "rtb-0ec6756e539873794",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0ec6756e539873794",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/16",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    }
                ],
                "Tags": [],
                "VpcId": "vpc-06a22444b7946ea01",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": true,
                        "RouteTableAssociationId": "rtbassoc-27e73d56",
                        "RouteTableId": "rtb-75bad00b",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-75bad00b",
                "Routes": [
                    {
                        "DestinationCidrBlock": "172.31.0.0/16",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-b394c6c8",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [],
                "VpcId": "vpc-330ae54e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0dbbe4eb7b82da103",
                        "RouteTableId": "rtb-0ce1e28a01f647d5a",
                        "SubnetId": "subnet-00a7ff0f29a2f7dd7",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0ce1e28a01f647d5a",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/16",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "private"
                    }
                ],
                "VpcId": "vpc-06a22444b7946ea01",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0a1406fe54d107160",
                        "RouteTableId": "rtb-093c0ae5ab7524554",
                        "SubnetId": "subnet-02e1a5b426e2b16a9",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-093c0ae5ab7524554",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/16",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0186e33a1d5903db5",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public"
                    }
                ],
                "VpcId": "vpc-06a22444b7946ea01",
                "OwnerId": "644160558196"
            }
        ],
        "ResponseMetadata": {}
    }
}
